--- a/template.ejs
+++ b/template.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://use.typekit.net/uhe5hup.css">
   <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
   <body>
